--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,23 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start":"docker-compose up",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint"
-  },
+    },
   "dependencies": {
+    "@apollo/client": "^3.9.4",
+    "@apollo/server": "^4.10.0",
+    "@as-integrations/next": "^3.0.0",
+    "@prisma/client": "^5.9.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "graphql": "^16.8.1",
+    "lucide-react": "^0.330.0",
+    "next": "14.1.0",
+    "nodemon": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.3.3"
   }
 }
