--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -18,14 +18,13 @@
       }
     ],
     "paths": {
-      "@/": ["./"]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "next-env.d.ts",
-    "/*.ts",
-    "/.tsx",
-    ".next/types/**/.ts",
+    "**/*.ts",
+    "**/.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
