--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -3,10 +3,6 @@ version: "3.8" # Docker Compose file format version
 services:
   db: # PostgreSQL database service
     image: postgres:16 # Docker image for PostgreSQL version 16
-    environment: # Environment variables for the PostgreSQL container
-      - POSTGRES_DB=postgres # Default database name
-      - POSTGRES_USER=${DB_USER} # Username for accessing the database (variable)
-      - POSTGRES_PASSWORD=${DB_PASSWORD} # Password for accessing the database (variable)
     ports:
       - "5432:5432" # Port mapping for accessing PostgreSQL externally
     volumes:
@@ -15,6 +11,12 @@ services:
       - .env
 
   client-dev:
+    depends_on:
+      - db
+    environment: # Environment variables for the PostgreSQL container
+      - POSTGRES_DB=postgres # Default database name
+      - POSTGRES_USER=${DB_USER} # Username for accessing the database (variable)
+      - POSTGRES_PASSWORD=${DB_PASSWORD} # Password for accessing the database (variable)
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -22,16 +24,21 @@ services:
       - "3000:3000"
     develop:
       watch:
-        - action: sync
-          path: .
+        - path: ./package.json
+          action: rebuild
+        - path: ./next.config.mjs
+          action: rebuild
+        - path: ./package-lock.json
+          action: rebuild
+        - path: .
+          target: /graphql
+          action: sync
+        - path: .
           target: /app
-          ignore:
-            - node_modules/
-        - action: rebuild
-          path: package.json
-    volumes:
-      - .:/app
-      - /app/node_modules
+          action: sync
+        - path: .
+          target: /componants
+          action: sync
     env_file:
       - .env
 
