--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "docker-compose up --build ",
+    "dockerBuild": "docker-compose up --build ",
+    "dockerUp": "docker-compose up ",
+    "dockerWatch": "docker-compose watch ",
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint"
@@ -27,6 +29,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
