--- a/my-app/Dockerfile.dev
+++ b/my-app/Dockerfile.dev
@@ -4,5 +4,6 @@ COPY package*.json .
 COPY . .
 RUN npm install
 RUN npx prisma generate
-EXPOSE 4000
+ENV PORT=3000
+EXPOSE 3000
 CMD [ "npm","run","dev" ]
