--- a/my-app/Dockerfile.prod
+++ b/my-app/Dockerfile.prod
@@ -3,6 +3,7 @@ WORKDIR /app
 COPY package*.json .
 COPY . .
 RUN npm install
-ENV PORT=3000
-EXPOSE 3000
+RUN npx prisma generate
+ENV PORT=8080
+EXPOSE 8080
 CMD [ "npm","run","build" ]
