--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -30,6 +30,8 @@ services:
           action: rebuild
         - path: ./package-lock.json
           action: rebuild
+        - path: ./.env
+          action: rebuild
         - path: .
           target: /graphql
           action: sync
@@ -41,15 +43,37 @@ services:
           action: sync
     env_file:
       - .env
-
-    # client-prod:
-    #   build:
-    #     context: .
-    #     dockerfile: Dockerfile.prod
-    #   ports:
-    #     - "4000:4000"
-    #   volumes:
-    #     - .:/app
-    #     - /app/node_modules
-    #   env_file:
-    #     - .env
+  
+  # client-prod:
+  #   depends_on:
+  #     - db
+  #   environment: # Environment variables for the PostgreSQL container
+  #     - POSTGRES_DB=postgres # Default database name
+  #     - POSTGRES_USER=${DB_USER} # Username for accessing the database (variable)
+  #     - POSTGRES_PASSWORD=${DB_PASSWORD} # Password for accessing the database (variable)
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.prod
+  #   ports:
+  #     - "8080:8080"
+  #   develop:
+  #     watch:
+  #       - path: ./package.json
+  #         action: rebuild
+  #       - path: ./next.config.mjs
+  #         action: rebuild
+  #       - path: ./package-lock.json
+  #         action: rebuild
+  #       - path: ./.env
+  #         action: rebuild
+  #       - path: .
+  #         target: /graphql
+  #         action: sync
+  #       - path: .
+  #         target: /app
+  #         action: sync
+  #       - path: .
+  #         target: /componants
+  #         action: sync
+  #   env_file:
+  #     - .env
