--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "dockerUp": "docker-compose up ",
     "dockerWatch": "docker-compose watch ",
     "dev": "next dev",
+    "seed":"node seed.ts",
     "build": "next build",
     "lint": "next lint"
   },
