signup UI and functionality completed

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,12 +7,13 @@
     "dockerUp": "docker-compose up ",
     "dockerWatch": "docker-compose watch ",
     "dev": "next dev",
-    "seed":"node seed.ts",
+    "seed": "node seed.ts",
     "build": "next build",
     "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
+    "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "@apollo/server": "^4.10.0",
     "@as-integrations/next": "^3.0.0",
     "@prisma/client": "^5.9.1",
