--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -22,16 +18,15 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*", "./app/*"]
     }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/.tsx",
-    ".next/types/**/*.ts"
-, "lib/apollo-wrapper.tsx"  ],
+    ".next/types/**/*.ts",
+    "lib/apollo-wrapper.tsx"
+  ],
   "exclude": ["node_modules"]
 }
