--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,10 +16,13 @@
     "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "@apollo/server": "^4.10.0",
     "@as-integrations/next": "^3.0.0",
+    "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
@@ -28,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
