--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "@apollo/server": "^4.10.0",
     "@as-integrations/next": "^3.0.0",
+    "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.9.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
