--- a/my-app/package.json
+++ b/my-app/package.json
@@ -33,7 +33,8 @@
     "react-icons": "^5.0.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
