--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -27,6 +27,6 @@
     "**/.tsx",
     ".next/types/**/*.ts",
     "lib/apollo-wrapper.tsx"
-  ],
+, "app/contexts/BasketDrawerContext.tsx"  ],
   "exclude": ["node_modules"]
 }
