--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "graphql": "^16.8.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
