--- a/my-app/package.json
+++ b/my-app/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-image-magnify": "^2.7.4",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -45,6 +46,7 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-image-magnify": "^2.7.4",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
