--- a/my-app/package.json
+++ b/my-app/package.json
@@ -28,14 +28,11 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
-    "nodemon": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "universal-cookie": "^7.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -45,6 +42,7 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
