--- a/my-app/package.json
+++ b/my-app/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-inner-image-zoom": "^3.0.2",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -43,9 +44,11 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-inner-image-zoom": "^3.0.3",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
   }
