--- a/my-app/package.json
+++ b/my-app/package.json
@@ -50,6 +50,7 @@
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack-cli": "^5.1.4"
   }
 }
