--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "@as-integrations/next": "^3.0.0",
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
