--- a/my-app/package.json
+++ b/my-app/package.json
@@ -31,6 +31,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
     "react-inner-image-zoom": "^3.0.2",
     "swiper": "^11.0.7",
