--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -21,7 +21,10 @@
       "@/*": [
         "./*",
         "./app/*",
-        "./app/(mainApp)/*",
+        "./app/(mainApp)/*"
+      ],
+      "@/app/public/*": [
+        "./app/public/*"
       ]
     }
   },
