--- a/my-app/package.json
+++ b/my-app/package.json
@@ -31,6 +31,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
+    "moment-timezone": "^0.5.45",
     "next": "14.1.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
