--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.9.4",
     "@apollo/experimental-nextjs-app-support": "^0.8.0",
-    "@apollo/server": "^4.10.0",
+    "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.9.1",
@@ -25,8 +25,8 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.0.0",
+    "cors": "^2.8.5",
+    "embla-carousel-react": "^8.1.3",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
