--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -30,6 +30,6 @@
     "**/.tsx",
     ".next/types/**/*.ts",
     "lib/apollo-wrapper.tsx"
-  ],
+, "app/(mainApp)/Home/@mainCategoriesSlide/mainCategoriesSlide.tsx"  ],
   "exclude": ["node_modules"]
 }
