--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/lodash": "^4.17.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -29,6 +30,7 @@
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.330.0",
     "moment-timezone": "^0.5.45",
     "next": "14.1.0",
