--- a/my-app/package.json
+++ b/my-app/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.0.1",
     "react-inner-image-zoom": "^3.0.2",
+    "react-schemaorg": "^2.0.0",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
