--- a/my-app/package.json
+++ b/my-app/package.json
@@ -33,7 +33,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.330.0",
     "moment-timezone": "^0.5.45",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "next-cloudinary": "^6.6.2",
     "nodemailer": "^6.9.13",
     "radix-ui": "^1.0.1",
