--- a/my-app/package.json
+++ b/my-app/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
