--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -35,7 +35,7 @@
     ".next/types/**/*.ts",
     "lib/apollo-wrapper.tsx",
     "app/(mainApp)/Home/@mainCategoriesSlide/mainCategoriesSlide.tsx",
-    "app/fireBase/firebase.ts",
+    "app/fireBase/firebase.ts"
   ],
   "exclude": ["node_modules"]
 }
