--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,8 +6,7 @@
     "dockerBuild": "docker-compose up --build ",
     "dockerUp": "docker-compose up ",
     "dockerWatch": "docker-compose watch ",
-    "dev": "next dev --experimental-https",
-    "seed": "node seed.ts",
+    "dev": "next dev",
     "build": "next build",
     "lint": "next lint"
   },
@@ -27,13 +26,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.13.2",
     "firebase-admin": "^12.5.0",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
-    "js-sha256": "^0.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.330.0",
@@ -52,7 +49,6 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "xlsx": "^0.18.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -65,7 +61,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-inner-image-zoom": "^3.0.3",
-    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.13",
