--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -25,6 +25,8 @@
       "@/app/*": ["./app/*"],
       "@/lib/*": ["./lib/*"],
       "@/public/*": ["./public/*"]
+
+   
     }
   },
   "include": [
