--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "dockerBuild": "docker-compose up --build ",
     "dockerUp": "docker-compose up ",
-    "dockerWatch": "docker-compose watch ",
-    "dev": "next dev -p 4000 ",
+    "dockerWatch": "docker-compose watch  ",
+    "dev": "next dev -p 4000 --experimental-https ",
     "start": "next start  ",
     "build": "next build",
-    "lint": "next lint",
-    "sitemap": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
@@ -18,7 +17,9 @@
     "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
     "@material-tailwind/react": "^2.1.9",
-    "@prisma/client": "^5.9.1",
+    "@next/third-parties": "^15.1.0",
+    "@prisma/client": "^5.22.0",
+    "@pusher/push-notifications-server": "^1.2.6",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-select": "^2.0.0",
@@ -40,8 +41,8 @@
     "moment-timezone": "^0.5.45",
     "next": "^14.2.5",
     "next-cloudinary": "^6.6.2",
-    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.13",
+    "prisma": "^5.22.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
