--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,7 +6,7 @@
     "dockerBuild": "docker-compose up --build ",
     "dockerUp": "docker-compose up ",
     "dockerWatch": "docker-compose watch  ",
-    "dev": "next dev -p 4000 --experimental-https ",
+    "dev": "next dev -p 4000  ",
     "start": "next start  ",
     "build": "next build",
     "lint": "next lint"
@@ -34,6 +34,7 @@
     "firebase": "^10.13.2",
     "firebase-admin": "^12.5.0",
     "graphql": "^16.8.1",
+    "i18next": "^24.2.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -41,15 +42,15 @@
     "moment-timezone": "^0.5.45",
     "next": "^14.2.5",
     "next-cloudinary": "^6.6.2",
+    "next-i18next": "^15.4.1",
     "nodemailer": "^6.9.13",
-    "prisma": "^5.22.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.4",
+    "react-i18next": "^15.2.0",
     "react-icons": "^5.0.1",
-    "react-inner-image-zoom": "^3.0.2",
     "react-schemaorg": "^2.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.2.1",
@@ -67,10 +68,10 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-inner-image-zoom": "^3.0.3",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.13",
+    "prisma": "^6.3.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3",
     "webpack-cli": "^5.1.4"
