--- a/my-app/Dockerfile.prod
+++ b/my-app/Dockerfile.prod
@@ -1,9 +1,29 @@
-FROM node:20.9.0
+# Use Node.js Alpine for a lightweight image
+FROM node:20.9.0-alpine
+
+# Set working directory
 WORKDIR /app
-COPY package*.json .
-COPY . .
+
+# Copy package files first to optimize caching
+COPY package*.json ./
+
+# Install dependencies
 RUN npm install
-RUN npx prisma generate
-ENV PORT=8080
-EXPOSE 8080
-CMD [ "npm","run","build" ]
+
+# Copy the rest of the application code
+COPY . .
+
+# Ensure Next.js environment variables are set
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_BASE_URL_DOMAIN
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_BASE_URL_DOMAIN=$NEXT_PUBLIC_BASE_URL_DOMAIN
+
+# Build the application
+RUN npm run build
+
+# Expose the Next.js default port
+EXPOSE 3000
+
+# Start the application
+CMD ["npm", "start"]
