--- a/my-app/sonar-project.properties
+++ b/my-app/sonar-project.properties
@@ -1,20 +1,21 @@
-# sonar-project.properties
-sonar.projectKey=a-b-squad
-sonar.projectName=A&B-Squad
+sonar.projectKey=A-B-Squad_ItaLuxury
+sonar.organization=ita-luxury
+sonar.host.url=https://sonarcloud.io
+sonar.projectName=ItaLuxuryFrontend
 sonar.projectVersion=1.0
-
-# Source files
-sonar.sources=app,components,lib,utils
-sonar.tests=__tests__,__tests__/components
-sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
-
-# TypeScript/JavaScript configuration
 sonar.language=ts
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=**/node_modules/**,**/*.d.ts,**/dist/**,**/build/**,**/.next/**,**/coverage/**
+sonar.sources=.
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/dist/**
 
 
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=ItaLuxury
+#sonar.projectVersion=1.0
 
-# Next.js specific
-sonar.javascript.file.suffixes=.js,.jsx,.ts,.tsx
-sonar.typescript.file.suffixes=.ts,.tsx
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
