--- a/.github/workflows/pipline-ci-cd.yml
+++ b/.github/workflows/pipline-ci-cd.yml
@@ -18,7 +18,9 @@ jobs:
           node-version: 21
 
       - name: Install Dependencies
-        run: npm install
+        run: |
+          cd my-app
+          npm install
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v6
