--- a/.github/workflows/pipline-ci-cd.yml
+++ b/.github/workflows/pipline-ci-cd.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Clone Source Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -23,12 +25,10 @@ jobs:
           npm install
 
       - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v6
+        uses: SonarSource/sonarcloud-scan-action@v3
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-
-
 
   # build-and-deploy:
   #   runs-on: ubuntu-latest
