--- a/my-app/sonar-project.properties
+++ b/my-app/sonar-project.properties
@@ -5,5 +5,5 @@ sonar.projectName=ItaLuxuryFrontend
 sonar.projectVersion=1.0
 sonar.language=ts
 sonar.sourceEncoding=UTF-8
-sonar.sources=.
+sonar.sources=my-app
 sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/dist/**
