--- a/.github/workflows/pipline-ci-cd.yml
+++ b/.github/workflows/pipline-ci-cd.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
       - name: Clone Source Code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -24,11 +22,13 @@ jobs:
           cd my-app
           npm install
 
-      - name: SonarQube Scan
-        uses: SonarSource/sonarcloud-scan-action@v3
+      - name: SonarQube Scan    
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+
 
   # build-and-deploy:
   #   runs-on: ubuntu-latest
