--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.organization=ita-luxury
 sonar.host.url=https://sonarcloud.io
 sonar.projectName=ItaLuxuryFrontend
 sonar.projectVersion=1.0
-sonar.language=ts
 sonar.sourceEncoding=UTF-8
 sonar.sources=my-app
+sonar.exclusions=**/node_modules/**,**/.next/**,**/build/**,**/dist/**,**/public/**
